Hopefully final lfs commit

--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -80,7 +80,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# df_test = pd.read_json(os.path.join(text_data, 'Easy/IR_test_easy.json'))\n",
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -191,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -210,8 +212,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# coding: utf-8\n",
@@ -255,6 +259,33 @@
     "test = list(read_dataset(dataloader_test))\n",
     "\n",
     "nwords = len(w2i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class CBOW(nn.Module):\n",
+    "\n",
+    "    def __init__(self, vocab_size, embedding_dim, img_feat_size, output_dim):\n",
+    "        super(CBOW, self).__init__()\n",
+    "        self.embeddings = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.linear1 = nn.Linear(embedding_dim + img_feat_size, output_dim)\n",
+    "        self.linear2 = nn.Linear(embedding_dim + img_feat_size, 1)\n",
+    "\n",
+    "    def forward(self, inputs):\n",
+    "        embeds = self.embeddings(inputs)\n",
+    "        bow = torch.sum(embeds, 1)\n",
+    "        \n",
+    "        logits = self.linear(bow)\n",
+    "        return logits\n",
+    "\n",
+    "model = CBOW(nwords, 64, ntags, 2048)\n",
+    "print(model)"
    ]
   },
   {
